samples/_failures_safe/1761417613_10cafe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_009d0df1.c: In function ‘main’:
./samples/SAFE/__tmp_009d0df1.c:186:1: error: expected declaration or statement at end of input
  186 | int main(void) {
      | ^~~
